Launchpad automatic translations update.

--- a/po/stellarium/be.po
+++ b/po/stellarium/be.po
@@ -8,17 +8,15 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-11-12 16:17+0200\n"
-"PO-Revision-Date: 2012-11-05 17:58+0000\n"
+"PO-Revision-Date: 2012-11-17 12:47+0000\n"
 "Last-Translator: 375gnu <Unknown>\n"
 "Language-Team: Belarusian <i18n@mova.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-11-13 04:52+0000\n"
-"X-Generator: Launchpad (build 16251)\n"
-"X-Poedit-Country: BELARUS\n"
+"X-Launchpad-Export-Date: 2012-11-18 04:34+0000\n"
+"X-Generator: Launchpad (build 16278)\n"
 "Language: be\n"
-"X-Poedit-Language: Belarusian\n"
 "X-Poedit-SourceCharset: utf-8\n"
 
 #: src/core/modules/GridLinesMgr.cpp:564 src/ui_viewDialog.h:1168
@@ -1469,6 +1467,7 @@ msgstr ""
 #: src/translations.h:241
 msgid "Phobos eclipsing the Sun as seen from Olympus Mons on Jan 10, 2068."
 msgstr ""
+"Зацьменьне Сонца Фобасам, назіранае з гары Алімп 10 студзеня 2068 года."
 
 #: src/translations.h:242
 msgid ""
@@ -1476,6 +1475,10 @@ msgid ""
 "occultations of both on the same day are very rare. Here's one that takes "
 "place 1/23/2048. In real speed."
 msgstr ""
+"Пакрыцьцё Зямлі Фобасам — звычайная зьява, гэтаксама як пакрыцьцё Юпітэра. "
+"Але пакрыцьцё абаіх у адзін і той жа дзень адбываецца вельмі рэдка. Адно з "
+"такіх пакрыцьцяў адбудзецца 23 студзеня 2048 года. Паказана ў сапраўднай "
+"хуткасьці."
 
 #: src/translations.h:243
 msgid ""
@@ -1484,6 +1487,10 @@ msgid ""
 "in the SH) again, then Mars totally eclipses the sun and Phobos, and then as "
 "Phobos emerges from the sun it passes through Mars' shadow and dims."
 msgstr ""
+"Фобас абганяе Марс і зацьмявае Сонца, праходзіць па ім, а пасьля рухаецца "
+"назад у напрамку Сонца й крыху зацьмявае яго (бачна толькі ў паўднёвай "
+"паўкулі) ізноў, пасьля Марс цалкам зацьмявае Сонца й Фобас, а пасьля Фобас "
+"зьяўляецца з-за Сонца й праходзіць празь цень і змрок ад Марса."
 
 #: src/translations.h:244
 msgid ""
@@ -1494,32 +1501,38 @@ msgstr ""
 
 #: src/translations.h:245
 msgid "A tour of the western constellations."
-msgstr ""
+msgstr "Агляд заходніх сузор'яў."
 
 #: src/translations.h:246
 msgid "Look at the Sun from big planets of Solar System and Pluto."
-msgstr ""
+msgstr "Як выглядае Сонца зь вялікіх плянэт Сонечнай сыстэмы й Плютона."
 
 #: src/translations.h:247
 msgid ""
 "Best views of Earth from other Solar System bodies in the 21st Century."
 msgstr ""
+"Найлепшыя віды Зямлі зь іншых аб'ектаў Сонечнай сыстэмы ў 21 стагодзьдзі."
 
 #: src/translations.h:248
 msgid "Transit of Venus as seen from Sydney Australia, 6th June 2012."
 msgstr ""
+"Транзыт Вэнэры, як ён быў бачны ў аўстралійскім Сыднэі 6 чэрвеня 2012 года."
 
 #: src/translations.h:249
 msgid ""
 "A demonstration of the analemma - the path of the Sun across the sky during "
 "the year."
 msgstr ""
+"Гэты сцэнар паказвае аналему — шлях, якім праходзіць Сонца па небе на "
+"працягу года."
 
 #: src/translations.h:250
 msgid ""
 "Flash of the supernova observed by Tycho Brahe in 1572. The Supernovae "
 "plugin has to be enabled."
 msgstr ""
+"Успышка звышновай, назіранай Тыха Браге ў 1572 годзе. Мусіш задзейнічаць "
+"дадатак «Звышновыя»."
 
 #: src/translations.h:255
 msgid "Andorra"
