--- a/README
+++ b/README
@@ -271,7 +271,7 @@ for more details on the location of the user data directory for your OS.
 	4.14 The folder icon derived from the Tango Desktop Project, used under
 		the terms of the Creative Commons Attribution Share-Alike
 		license.
-	4.15 Images of NGC7023, NGC7317, NGC7318, NGC7319, NGC7320, NGC7331 
+	4.15 Images of NGC5139, NGC7023, NGC7317, NGC7318, NGC7319, NGC7320, NGC7331 
 		from Andrey Kuznetsov, Kepler Observatory
 		http://kepler-observatorium.ru
 		License: Creative Commons Attribution 3.0 Unported
