--- a/README
+++ b/README
@@ -272,7 +272,7 @@ for more details on the location of the user data directory for your OS.
 		the terms of the Creative Commons Attribution Share-Alike
 		license.
 	4.15 Images of NGC281, NGC5139, NGC6543, NGC6960, NGC7023, NGC7317, NGC7318, 
-		NGC7319, NGC7320, NGC7331 
+		NGC7319, NGC7320, NGC7331, IC4592
 		from Andrey Kuznetsov, Kepler Observatory
 		http://kepler-observatorium.ru
 		License: Creative Commons Attribution 3.0 Unported
