Launchpad automatic translations update.

--- a/po/stellarium-skycultures/fi.po
+++ b/po/stellarium-skycultures/fi.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-10-28 15:59+0700\n"
-"PO-Revision-Date: 2012-11-17 22:52+0000\n"
-"Last-Translator: Tuomas Teipainen <tuomastpnen@gmail.com>\n"
+"PO-Revision-Date: 2012-11-18 13:50+0000\n"
+"Last-Translator: Tuomas Teipainen <tmsteipainen1@gmail.com>\n"
 "Language-Team: Finnish <fi@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-11-18 04:35+0000\n"
+"X-Launchpad-Export-Date: 2012-11-19 04:36+0000\n"
 "X-Generator: Launchpad (build 16278)\n"
 
 #: nebulae/default/ngc2000names.dat:112
@@ -887,7 +887,7 @@ msgstr "Karhu"
 
 #: skycultures/arabic/star_names.fab:82
 msgid "One of Al-zubarah"
-msgstr "Ensimmäinen Al-zuburah"
+msgstr "Yksi Al-zuburaheista"
 
 #: skycultures/arabic/star_names.fab:83
 msgid "Second Al-zubarah"
@@ -976,7 +976,7 @@ msgstr "Keihäänheittäjä"
 
 #: skycultures/arabic/star_names.fab:104
 msgid "One of Al-ghofer's"
-msgstr "Yksi Al-ghoferin omista"
+msgstr "Yksi Al-ghofereista"
 
 #: skycultures/arabic/star_names.fab:105
 msgid "The shepherd"
@@ -1300,7 +1300,7 @@ msgstr "Toinen Alkalae"
 
 #: skycultures/arabic/star_names.fab:186
 msgid "One of Alkalaes"
-msgstr "Ensimmäinen Alkale"
+msgstr "Yksi Alkaleista"
 
 #: skycultures/arabic/star_names.fab:187
 msgid "The Scattered stars"
@@ -1336,7 +1336,7 @@ msgstr "Ensimmäinen lepinkäinen"
 
 #: skycultures/arabic/star_names.fab:195
 msgid "Second shrike"
-msgstr "Ensimmäinen lepinkäinen"
+msgstr "Toinen lepinkäinen"
 
 #: skycultures/arabic/star_names.fab:196
 msgid "Fourth one of the sitting's"
@@ -1372,7 +1372,7 @@ msgstr "Toinen ahdistus"
 
 #: skycultures/arabic/star_names.fab:204
 msgid "First one of the anguish"
-msgstr "Ensimmäinen ahdistus"
+msgstr "Ensimmäinen ahdistuksista"
 
 #: skycultures/arabic/star_names.fab:205
 msgid "First wolf"
