--- a/po/stellarium/pl.po
+++ b/po/stellarium/pl.po
@@ -10,14 +10,14 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-11-12 16:17+0200\n"
-"PO-Revision-Date: 2012-11-07 01:18+0000\n"
+"PO-Revision-Date: 2012-11-19 01:05+0000\n"
 "Last-Translator: pp/bs <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-11-13 05:00+0000\n"
-"X-Generator: Launchpad (build 16251)\n"
+"X-Launchpad-Export-Date: 2012-11-19 04:36+0000\n"
+"X-Generator: Launchpad (build 16278)\n"
 "X-Poedit-Country: SPAIN\n"
 "X-Poedit-Language: Spanish\n"
 
@@ -1508,32 +1508,35 @@ msgstr ""
 
 #: src/translations.h:245
 msgid "A tour of the western constellations."
-msgstr ""
+msgstr "Podróż po gwiazdozbiorach w układzie wg kultury zachodniej."
 
 #: src/translations.h:246
 msgid "Look at the Sun from big planets of Solar System and Pluto."
 msgstr ""
+"Spojrzenie na Słońce z dużych planet Układu Słonecznego oraz z Plutona."
 
 #: src/translations.h:247
 msgid ""
 "Best views of Earth from other Solar System bodies in the 21st Century."
-msgstr ""
+msgstr "Najlepsze widoki Ziemi z innych ciał Układu Słonecznego w XXI wieku."
 
 #: src/translations.h:248
 msgid "Transit of Venus as seen from Sydney Australia, 6th June 2012."
-msgstr ""
+msgstr "Tranzyt Wenus widziany z Sydney (Australia) 6 czerwca 2012 r."
 
 #: src/translations.h:249
 msgid ""
 "A demonstration of the analemma - the path of the Sun across the sky during "
 "the year."
-msgstr ""
+msgstr "Demonstracja analemmy - drogi Słońca na niebie w ciągu roku."
 
 #: src/translations.h:250
 msgid ""
 "Flash of the supernova observed by Tycho Brahe in 1572. The Supernovae "
 "plugin has to be enabled."
 msgstr ""
+"Błysk supernowej obserwowanej przez Tycho Brahe w 1572 r. Wtyczka Supernowe "
+"musi być włączona."
 
 #: src/translations.h:255
 msgid "Andorra"
@@ -6669,7 +6672,7 @@ msgstr "Aktualizuj dane na temat egzoplanet z Internetu"
 
 #: plugins/Observability/src/Observability.cpp:66
 msgid "Observability analysis"
-msgstr ""
+msgstr "Analiza obserwowalności"
 
 #: plugins/Observability/src/Observability.cpp:69
 msgid ""
@@ -6983,6 +6986,8 @@ msgid ""
 "When the Moon is selected, the program can compute the exact closest dates "
 "of the Moon's opposition to the Sun."
 msgstr ""
+"Wybranie Księżyca pozwala na obliczenie przez program dokładnych dat "
+"najbliższych opozycji Księżyca w stosunku do Słońca."
 
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:144
 #: plugins/Observability/src/gui/ObservabilityDialog.cpp:216
