--- a/po/stellarium/si.po
+++ b/po/stellarium/si.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-11-12 16:17+0200\n"
-"PO-Revision-Date: 2012-11-16 16:49+0000\n"
-"Last-Translator: Dileepa Rajapaksa(දිලීප රාජපක්ෂ) <Unknown>\n"
+"PO-Revision-Date: 2012-11-18 15:45+0000\n"
+"Last-Translator: අනුරාධ Jayathilaka <astroanu2004@yahoo.co.uk>\n"
 "Language-Team: Sinhalese <si@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-11-17 04:34+0000\n"
+"X-Launchpad-Export-Date: 2012-11-19 04:36+0000\n"
 "X-Generator: Launchpad (build 16278)\n"
 "X-Poedit-Country: SRI LANKA\n"
 "X-Poedit-Language: Estonian\n"
@@ -68,7 +68,7 @@ msgstr "වර්ගය: <b>%1</b>"
 #: plugins/Exoplanets/src/Exoplanet.cpp:174
 #, qt-format
 msgid "Magnitude: <b>%1</b> (extincted to: <b>%2</b>)"
-msgstr ""
+msgstr "දීප්තතාවය: <b>%1</b> ( <b>%2</b> දී ශුන්‍ය වේ)"
 
 #: src/core/modules/Nebula.cpp:123 src/core/modules/Planet.cpp:439
 #: src/core/modules/MinorPlanet.cpp:200 src/core/modules/Comet.cpp:120
@@ -184,7 +184,7 @@ msgstr ""
 #: src/core/modules/Planet.cpp:515
 #, qt-format
 msgid "Phase: %1"
-msgstr ""
+msgstr "කලාව:%1"
 
 #: src/core/modules/Planet.cpp:516
 #, qt-format
@@ -370,7 +370,7 @@ msgstr "උද්දිගංශය: %1/%2"
 
 #: src/core/SimbadSearcher.cpp:55
 msgid "Network error"
-msgstr ""
+msgstr "ජාලයේ දෝශයකි"
 
 #: src/core/SimbadSearcher.cpp:92 src/core/SimbadSearcher.cpp:104
 msgid "Error parsing position"
@@ -382,15 +382,15 @@ msgstr ""
 
 #: src/core/SimbadSearcher.cpp:132
 msgid "Error"
-msgstr ""
+msgstr "දෝෂය"
 
 #: src/core/SimbadSearcher.cpp:134
 msgid "Not found"
-msgstr ""
+msgstr "ගැළපීමක් හමුනොවිය"
 
 #: src/core/SimbadSearcher.cpp:134
 msgid "Found"
-msgstr ""
+msgstr "ගැලපීම් හමුවිය"
 
 #: src/gui/ConfigurationDialog.cpp:416 src/gui/ConfigurationDialog.cpp:418
 msgid "Select screenshot directory"
@@ -447,7 +447,7 @@ msgstr ""
 
 #: src/gui/ConfigurationDialog.cpp:869
 msgid "All available star catalogs have been installed."
-msgstr ""
+msgstr "සියළු තරු නාමාවලි ස්ථාපනය කර ඇත"
 
 #: src/gui/ConfigurationDialog.cpp:874
 #, qt-format
@@ -793,7 +793,7 @@ msgstr "ස්වාභාවික"
 
 #: src/gui/ScriptConsole.cpp:78
 msgid "starchart"
-msgstr ""
+msgstr "තරු සිතියම"
 
 #: src/gui/SearchDialog.cpp:359
 msgid "Simbad Lookup Error"
@@ -1289,7 +1289,7 @@ msgstr ""
 #. TRANSLATORS: Name of script
 #: src/translations.h:190
 msgid "Partial Lunar Eclipse"
-msgstr ""
+msgstr "අර්ධ චන්ද්‍ර ග්‍රහණය"
 
 #. TRANSLATORS: Name of script
 #: src/translations.h:192
@@ -1299,12 +1299,12 @@ msgstr "පූර්ණ චන්ද්‍ර ග්‍රහණය"
 #. TRANSLATORS: Name of script
 #: src/translations.h:194
 msgid "Screensaver"
-msgstr ""
+msgstr "තිරආවරකය"
 
 #. TRANSLATORS: Name of script
 #: src/translations.h:196
 msgid "Solar Eclipse 2009"
-msgstr ""
+msgstr "සූර්යය ග්‍රහණය 2009"
 
 #. TRANSLATORS: Name of script
 #: src/translations.h:198
@@ -1314,7 +1314,7 @@ msgstr ""
 #. TRANSLATORS: Name of script
 #: src/translations.h:200
 msgid "Zodiac"
-msgstr ""
+msgstr "රාශිචක්‍රය"
 
 #. TRANSLATORS: Name of script
 #: src/translations.h:202
