added textures for NGC891 and NGC4490

--- a/README
+++ b/README
@@ -272,11 +272,11 @@ for more details on the location of the user data directory for your OS.
 		the terms of the Creative Commons Attribution Share-Alike
 		license.
 	4.15 Images of NGC281, NGC5139, NGC6543, NGC6960, NGC7023, NGC7317, NGC7318, 
-		NGC7319, NGC7320, NGC7331, IC4592
+		NGC7319, NGC7320, NGC7331, IC4592 
 		from Andrey Kuznetsov, Kepler Observatory
 		http://kepler-observatorium.ru
 		License: Creative Commons Attribution 3.0 Unported
-	4.16 Images of NGC7129 
+	4.16 Images of NGC891, NGC4490, NGC7129 
 		from Oleg Bryzgalov 
 		http://olegbr.astroclub.kiev.ua/
 		License: Creative Commons Attribution 3.0 Unported
