added texture for NGC1333

--- a/README
+++ b/README
@@ -276,7 +276,7 @@ for more details on the location of the user data directory for your OS.
 		from Andrey Kuznetsov, Kepler Observatory
 		http://kepler-observatorium.ru
 		License: Creative Commons Attribution 3.0 Unported
-	4.16 Images of NGC891, NGC4490, NGC7129 
+	4.16 Images of NGC891, NGC1333, NGC4490, NGC7129 
 		from Oleg Bryzgalov 
 		http://olegbr.astroclub.kiev.ua/
 		License: Creative Commons Attribution 3.0 Unported
