added textures for NGC3185, NGC3187, NGC3189, NGC3190 and NGC3193

--- a/README
+++ b/README
@@ -276,7 +276,8 @@ for more details on the location of the user data directory for your OS.
 		from Andrey Kuznetsov, Kepler Observatory
 		http://kepler-observatorium.ru
 		License: Creative Commons Attribution 3.0 Unported
-	4.16 Images of NGC891, NGC1333, NGC2903, NGC3718, NGC3729, NGC4490, NGC7129 
+	4.16 Images of NGC891, NGC1333, NGC2903, NGC3185, NGC3187, NGC3189, NGC3190, 
+		NGC3193, NGC3718, NGC3729, NGC4490, NGC7129 
 		from Oleg Bryzgalov 
 		http://olegbr.astroclub.kiev.ua/
 		License: Creative Commons Attribution 3.0 Unported
